--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" class="layui-nav-img"><span class="text-avatar">A</span> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
 
@@ -60,9 +60,11 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-file"></i>  基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-picture"></i>  更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-refresh-3"></i>  重置密码</a></dd>
+                            <dd>
+                                <a href="/user/user_info.html" target="fm"> <i class="layui-icon layui-icon-file"></i> 基本资料</a>
+                            </dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-picture"></i>  更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-refresh-3"></i>  重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
